idf_component_register(SRCS "can.c" "empl_driver.c" "inv_mpu_dmp_motion_driver.c" "inv_mpu.c" "mpu_dmp_driver.c" "pub.c" "myFontCN32.c" "myFontCN.c" "jf_logo_w_180_240.c" "jf_logo_w_90_120.c" "jf_logo_w_60_80.c" "jf_logo_w_45_60.c" "jf_logo_w_30_40.c" "lvgl_init.c" "uart.c" "robot_state.c" "iic.c" "PCA9685.c" "main.c" "mcpwm.c"
                    INCLUDE_DIRS ".")
